fdo#68373 pattern matching in autocorrection for suffix rich lang.

Change-Id: I4a996c51e6e7115e90bf15254b26025aae1f9a6c